--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,19 @@
 *.lai
 *.la
 *.a
+
+*.pdb
+Debug
+Release
+*.user
+*.suo
+*.ilk
+*.exe
+*.dll
+x64
+*.aps
+*.tlog
+*.res
+*.log
+*.opensdf
+*.sdf
